--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Chaitanya Vardhan's Blog</title>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
+  <link rel='stylesheet' id=''  href='/assets/css/style.css?ver=4.5.1' type='text/css' media='all' />
+</head>
 <h1>Chaitanya Vardhan's Blog</h1>
