--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Chaitanya Vardhan's Blog</title>
+  <link rel="shortcut icon" type="image/png" href="/assets/img/favicon.png">
+  <!-- https://www.iconfinder.com/yanlu -->
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
   <link rel='stylesheet' id=''  href='/assets/css/style.css?ver=4.5.1' type='text/css' media='all' />
 </head>
 <h1>Chaitanya Vardhan's Blog</h1>
+
