--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
   <link rel='stylesheet' id=''  href='/assets/css/style.css?ver=4.5.1' type='text/css' media='all' />
 </head>
-<h1>Chaitanya Vardhan's Blog</h1>
+<body>
+  <div id="page">
+    <header class="site-header">
+      <nav id="site-navigation" class="main-navigation">
+	<div id="logo-container">
+	  <a href="/" id="logo">Chaitanya's Blog</a>
+	</div>
+      </nav>
+    </header>
+  </div>
+</body>
 
