--- a/index.html
+++ b/index.html
@@ -1,23 +1,6 @@
-<!DOCTYPE html>
-<html lang="en-US">
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Chaitanya Vardhan's Blog</title>
-  <link rel="shortcut icon" type="image/png" href="/assets/img/favicon.png">
-  <!-- https://www.iconfinder.com/yanlu -->
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
-  <link rel='stylesheet' id=''  href='/assets/css/style.css?ver=4.5.1' type='text/css' media='all' />
-</head>
-<body>
-  <div id="page">
-    <header class="site-header">
-      <nav id="site-navigation" class="main-navigation">
-	<div id="logo-container">
-	  <a href="/" id="logo">Chaitanya's Blog</a>
-	</div>
-      </nav>
-    </header>
-<p>Hello world from Chaitanya</p>
-  </div
-</body>
-
+---
+layout: page
+title: '><'
+subtitle: Random stuff about code, movies and whatever stuff I find interesting
+use-site-title: true
+---
